package chordMsgs;

message SendIdMessage {
	required string id = 1;
}

message FingerMessage {
	required string address = 1;
	required string id = 2;
}

message PredMessage {
	required FingerMessage pred = 1;
}

message SendFingersMessage {
	repeated FingerMessage fingers = 1;
}


message ChordMessage {
	required Command cmd = 1;
	optional PredMessage cpmsg = 2;
	optional SendIdMessage sidmsg = 4;
	optional SendFingersMessage sfmsg = 5;

	enum Command {
		Ping = 1;
		Pong = 2;
		GetPred = 3;
		GetId = 4;
		GetFingers = 5;
		ClaimPred = 6;
		GetSucc = 7;
	};
}

message NetworkMessage {
	required uint32 proto = 1;
	optional string msg = 2;
}
